# missing-rfam-hits

./: .envrc  .gitignore  flake.nix  main.nf  pyproject.toml
data/: missing.txt
results/: dates.csv  hits.txt  sheet.csv
