[tool.poetry]
name = "test-missing-rfam-hits"
version = "0.1.0"
description = ""
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "test_missing_rfam_hits"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
biopython = "^1.80"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
